# scratch_repository

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-build-push.yml  python-app.yml
checkpoints/: checkpoint_tracker.json
checkpoints/v0.1/: model.safetensors
checkpoints/v1.0/: model.safetensors  random_states_0.pkl  random_states_1.pkl  random_states_2.pkl  random_states_3.pkl  random_states_4.pkl  random_states_5.pkl  random_states_6.pkl  random_states_7.pkl
docker/: Dockerfile.base  Dockerfile.data_image  Dockerfile.inference
docs/: README.md  about_the_data.md  create_docker_image.md  how_to_clone_to_runpod.md  inference.md  using_runpod.md  virtual-env-instructions.md
notebooks/: Murcko_splitting_experiment.ipynb  finetuning_playground.ipynb  training_notebook.ipynb
scripts/: extract_nth_datapoint.py  extract_subset.py  inchikeys.csv  pickle_file_viewer.py  sanity_check_inference.py  update_checkpoint_tracker.py
src/alchemists/: custom_model.py
src/team5/data/: data_loader.py  data_split.py  pad.py  plot_spectra.ipynb  prepare.py
src/team5/inference/: checkpoint_loader.py  infer.py  inference.py  load_model.py  plot_sample_results.py
src/team5/models/: custom_model.py  graff.py  graffMS_with_chemBERTa.py  molecule_graph_embeddings.py  smiles_to_graph_mapper.py  test_custom_model.py
src/team5/training/: config.py  data_preprocessing.py  finetuning_training.py  lora_config.py  (+2 more)
team5/data/: data_loader.py  data_split.py  pad.py
tests/: test_data_split.py  test_prepare.py
