[tool.poetry]
name = "team5"
version = "0.1.0"
description = "This is the model created by Team5"
authors = ["Your Name <you@example.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.4.1"
pandas = "^2.2.3"
pyarrow = "^17.0.0"
numpy = "^2.1.2"
polars = "^1.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pre-commit = "^4.0.1"
jupyter = "^1.1.1"
parquet-cli = "^1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
