[project]
name = "team5"

[tool.poetry]
name = "team5"
version = "0.1.0"
description = "This is the model created by Team5"
authors = ["Your Name <you@example.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.scripts]
train = "src.team5.training.finetuning_training:main"
infer = "src.team5.inference.inference:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
torch = "^2.4.1"
pandas = "^2.2.3"
pyarrow = "^17.0.0"
numpy = ">1.22,<1.27"
polars = "^1.9.0"
rdkit = "^2024.3.5"
matplotlib = "^3.9.2"
transformers = "^4.45.2"
simpletransformers = "^0.70.1"
einops = "^0.8.0"
peft = "^0.13.2"
evaluate = "^0.4.3"
accelerate = "^1.0.1"
argparse = "^1.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pre-commit = "^4.0.1"
jupyter = "^1.1.1"
parquet-cli = "^1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
